[package]
name = "cafedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.25.3", features = ["bundled"] }
axum = "0.5"
askama = "0.11"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
hyper = "0.14.32"
serde = { version = "1.0.219", features = ["derive"] }